kubernetes/applications/media/manifests/jellyfin/jellyfin-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jellyfin-service
  namespace: media
spec:
  selector:
    app: jellyfin
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8096
      targetPort: 8096
